--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-# testpage index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+test body
+<script type="text/javascript">
+    var gr_goal_params = {
+        param_0 : '',
+        param_1 : '',
+        param_2 : '',
+        param_3 : '',
+        param_4 : '',
+        param_5 : ''
+    };</script>
+<script type="text/javascript" src="https://f4-alpha-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ"></script>
+</body>
+</html>
