structure, gr goals js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ test body
         param_4 : '',
         param_5 : ''
     };</script>
-<script type="text/javascript" src="https://f4-alpha-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ"></script>
+<script type="text/javascript" src="https://beta-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ"></script>
 </body>
 </html>
