--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 test body
+http://beta-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ
 <script type="text/javascript">
     var gr_goal_params = {
         param_0 : '',
@@ -15,6 +16,6 @@ test body
         param_4 : '',
         param_5 : ''
     };</script>
-<script type="text/javascript" src="https://beta-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ"></script>
+<script type="text/javascript" src="http://beta-app.getresponse.com/goals_log.js?p=960802&u=SZ2vQ"></script>
 </body>
 </html>
