--- a/demo1/index.html
+++ b/demo1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 test body demo1
-http://www.marketingflowchartsystem.com/goals_log.js?p=76&u=1
+https://www.marketingflowchartsystem.com/goals_log.js?p=76&u=1
 
 
 <script type="text/javascript">
@@ -18,6 +18,6 @@ http://www.marketingflowchartsystem.com/goals_log.js?p=76&u=1
         param_4 : '',
         param_5 : ''
     };</script>
-<script type="text/javascript" src="http://www.marketingflowchartsystem.com/goals_log.js?p=76&u=1"></script>
+<script type="text/javascript" src="https://www.marketingflowchartsystem.com/goals_log.js?p=76&u=1"></script>
 </body>
 </html>
